# seth_ql

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  cmake_install.cmake  run_cmake  typestest
binds_array_wrapper/: CMakeLists.txt  SqlTypes.cpp  utilities.cpp
binds_array_wrapper/include/: BindsArray.hpp  Span.hpp  makeBinds.hpp  utilities.h
binds_array_wrapper/include/SqlTypes/: InputCType.hpp  OutputCType.hpp  SqlCType.h  SqlTypes.h
create_db_table_binds/: CMakeLists.txt  createDBTableBinds.cpp  getDBTables.cpp
create_db_table_binds/generated_code/: CMakeLists.txt  giraffeBinds.cpp  girrafeBinds.cpp  performance_schemaBinds.cpp
create_db_table_binds/generated_code/include/: giraffeBinds.h  performance_schemaBinds.h
create_db_table_binds/include/: createDBTableBinds.h  getDBTables.h
example_code/: generate_files.cpp  insert_photos.cpp  prep_stmts.cpp  prep_stmts_insert.cpp
example_code/generated_files/: girrafeBinds.cpp  girrafeBinds.h  performance_schemaBinds.cpp  performance_schemaBinds.h  seth_qlBinds.cpp  seth_qlBinds.h
include/: BindsArray.hpp  CharArrView.hpp  MySQLSession.h  Query.h  Span.hpp  Statement.h  binds.hpp  common.h  createDBTableBinds.h  fieldTypes.hpp  getDBTables.h  giraffe_binds.h  makeBinds.hpp  myVars.h  mybank_binds.h  seth_ql.h  sqlTypes.hpp  tablerow.h  tablerow.hpp  turnermap.hpp  typeCreationStrings.h  utilities.h
include/SqlTypes/: InputCType.hpp  OutputCType.hpp  SqlCType.h
include/_generated/: giraffeBinds.h  myBankBinds.h  mybankBinds.h  performance_schemaBinds.h
misc/: CMakeLists.txt  csv_parser.cpp
misc/include/: csv_parser.h
other_mysql_wrappers/: CMakeLists.txt  Statement.cpp  common.cpp
other_mysql_wrappers/include/: MySQLSession.h  Query.h
sample_code/: prep_stmts_insert.cpp
src/: createDBTableBinds.cpp  getDBTables.cpp  giraffe_binds.cpp  main.cpp  mybank_binds.cpp  tablerow.cpp  utilities.cpp
src/_generated/: giraffeBinds.cpp  myBankBinds.cpp  mybankBinds.cpp  performance_schemaBinds.cpp
src/create_db_table_binds/: createDBTableBinds.cpp  getDBTables.cpp
src/other_mysql_wrappers/: MySQLSession.cpp  Query.cpp  Statement.cpp  common.cpp
tester_main/: CMakeLists.txt  main.cpp
